<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/title_shadow"
        android:fontFamily="@font/gmarket_sans_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="후원하기"
        android:textSize="30sp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DonationFragment"
    android:orientation="vertical"
    android:padding="25dp"
    android:paddingEnd="35dp"
    android:paddingBottom="10dp"
    android:background="@drawable/fragment_round_corner">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/canImage"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_can"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/donationTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarket_sans_bold"
            android:text="@string/donation_title1"
            android:textSize="25sp"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/canImage"
            app:layout_constraintLeft_toRightOf="@id/canImage"
            app:layout_constraintBottom_toBottomOf="@id/canImage"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.9"
            />

        <Button
            android:id="@+id/donationBtn1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_price_button"
            android:fontFamily="@font/gmarket_sans_medium"
            android:text="@string/donation_price1"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/canImage"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toRightOf="@id/donationTitle1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/canImage"
            app:layout_constraintDimensionRatio="2.3:1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/navDeactivate"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/gmarket_sans_medium"
        android:layout_marginTop="5dp"
        android:text="@string/donation_content1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/coffeeImage"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_coffee"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/donationTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarket_sans_bold"
            android:text="@string/donation_title2"
            android:textSize="25sp"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/coffeeImage"
            app:layout_constraintLeft_toRightOf="@id/coffeeImage"
            app:layout_constraintBottom_toBottomOf="@id/coffeeImage"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.9"
            />

        <Button
            android:id="@+id/donationBtn2"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_price_button"
            android:fontFamily="@font/gmarket_sans_medium"
            android:text="@string/donation_price2"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/coffeeImage"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toRightOf="@id/donationTitle2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/coffeeImage"
            app:layout_constraintDimensionRatio="2.3:1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/navDeactivate"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmarket_sans_medium"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/donation_content2"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/cakeImage"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_cake"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/donationTitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarket_sans_bold"
            android:text="@string/donation_title3"
            android:textSize="25sp"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/cakeImage"
            app:layout_constraintLeft_toRightOf="@id/cakeImage"
            app:layout_constraintBottom_toBottomOf="@id/cakeImage"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.9"
            />

        <Button
            android:id="@+id/donationBtn3"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_price_button"
            android:fontFamily="@font/gmarket_sans_medium"
            android:text="@string/donation_price3"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/cakeImage"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toRightOf="@id/donationTitle3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/cakeImage"
            app:layout_constraintDimensionRatio="2.3:1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/navDeactivate"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmarket_sans_medium"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/donation_content3"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/donationContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:background="@drawable/donation_background"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarket_sans_medium"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/candidateSearchFontColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/donation_main_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmarket_sans_light"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/donation_ps"/>

</LinearLayout>
</LinearLayout>