<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/districtContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_round_corner"
    android:padding="10dp"
    android:paddingStart="1dp"
    android:paddingEnd="10dp"
    tools:context=".DistrictListFragment">

    <LinearLayout
        android:id="@+id/districtNavGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/navMapPin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_map_pin"
            />
        <TextView
            android:id="@+id/navSi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="17sp"
            android:text="@string/si_title"
            android:fontFamily="@font/gmarket_sans_light"
            />

        <LinearLayout
            android:id="@+id/navGuGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

        <TextView
            android:id="@+id/navGuArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:text=">"
            android:fontFamily="@font/gmarket_sans_light"
            />
        <TextView
            android:id="@+id/navGu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/gu_title"
            android:fontFamily="@font/gmarket_sans_light"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navDongGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/navDongArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=">"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:fontFamily="@font/gmarket_sans_light"
                />
            <TextView
                android:id="@+id/navDong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textSize="17sp"
                android:text="@string/dong_title"
                android:fontFamily="@font/gmarket_sans_light"
                />

        </LinearLayout>

    </LinearLayout>
    <View
        android:id="@+id/recyclerViewTopHr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/districtNavGroup"
        app:layout_constraintBottom_toTopOf="@id/districtList"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/districtList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewBottomHr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTopHr"
        tools:listitem="@layout/item_disctrict" />

    <View
        android:id="@+id/recyclerViewBottomHr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/districtList"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/districtProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@android:style/Widget.Material.Light.ProgressBar.Inverse"
        app:layout_constraintLeft_toLeftOf="@id/districtList"
        app:layout_constraintRight_toRightOf="@id/districtList"
        app:layout_constraintTop_toTopOf="@id/districtList"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>